--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -138,7 +138,7 @@
         <div class="row">
             <div class="col-md-3" data-step="1" data-intro="This is where you can view detailed reports and analytics.">
                 <div class="card">
-                    <img src="{% static 'images/reports.png' %}" class="card-img-top" alt="Reports">
+                    <img src="{% static '/static/images/reports.png' %}" class="card-img-top" alt="Reports">
                     <div class="card-body">
                         <h5 class="card-title">Reports and Analytics</h5>
                         <p class="card-text">Dive into comprehensive reports and analytics on energy consumption and efficiency. Understand your energy profile with detailed insights.</p>
