--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/intro.js/minified/intro.min.js"></script>
     <style>
         body {
-        background-color: #f0f2f5; /* Light grayish background color */
-        font-family: Arial, sans-serif;
-        color : #333333;
-        margin: 0;
+            background-color: #f0f2f5; /* Light grayish background color */
+            font-family: Arial, sans-serif;
+            color: #333333;
+            margin: 0;
         }
         .navbar {
             background-color: #f0f0f0; /* Weak gray background */
@@ -60,43 +60,38 @@
             margin: 0 auto;
         }
         .card {
-    border: none;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-align: center;
-    background-color: #ffffff; /* White background for cards */
-    max-width: 300px;
-    margin: 20px auto;
-    padding: 20px;
-}
-
-.card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.card-body {
-    padding: 15px;
-}
-
-.card-title {
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.card-text {
-    font-size: 1rem;
-    color: #555555;
-}
-
-.card img {
-    max-width: 100%;
-    border-bottom: 1px solid #eeeeee;
-    margin-bottom: 15px;
-}
+            border: none;
+            border-radius: 0.5rem;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-align: center;
+            background-color: #ffffff; /* White background for cards */
+            max-width: 300px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .card-body {
+            padding: 15px;
+        }
+        .card-title {
+            font-size: 1.25rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .card-text {
+            font-size: 1rem;
+            color: #555555;
+        }
+        .card img {
+            max-width: 100%;
+            border-bottom: 1px solid #eeeeee;
+            margin-bottom: 15px;
+        }
         .footer {
             background-color: #f0f0f0;
             padding: 20px 0;
@@ -138,7 +133,7 @@
         <div class="row">
             <div class="col-md-3" data-step="1" data-intro="This is where you can view detailed reports and analytics.">
                 <div class="card">
-                    <img src="{% static '/static/images/reports.png' %}" class="card-img-top" alt="Reports">
+                    <img src="{% static 'images/reports.png' %}" class="card-img-top" alt="Reports">
                     <div class="card-body">
                         <h5 class="card-title">Reports and Analytics</h5>
                         <p class="card-text">Dive into comprehensive reports and analytics on energy consumption and efficiency. Understand your energy profile with detailed insights.</p>
@@ -185,17 +180,16 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-    if (window.location.search.includes('restart_intro=true')) {
-        localStorage.removeItem('introCompleted');
-    }
+            if (window.location.search.includes('restart_intro=true')) {
+                localStorage.removeItem('introCompleted');
+            }
 
-    if (!localStorage.getItem('introCompleted')) {
-        introJs().start().oncomplete(function () {
-            localStorage.setItem('introCompleted', 'true');
+            if (!localStorage.getItem('introCompleted')) {
+                introJs().start().oncomplete(function () {
+                    localStorage.setItem('introCompleted', 'true');
+                });
+            }
         });
-    }
-});
-
     </script>
 </body>
 </html>
