--- a/energy_prediction/templates/energy_prediction/predict_form.html
+++ b/energy_prediction/templates/energy_prediction/predict_form.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'faq' %}">F&Q</a>
+                <a class="nav-link" href="{% url 'faq' %}">Support Page</a>
             </li>
         </ul>
     </div>
