--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -117,7 +117,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'faq' %}">F&Q</a>
+                    <a class="nav-link" href="{% url 'faq' %}">Support Page</a>
                 </li>
             </ul>
         </div>
