--- a/monitoring/templates/monitoring/upload_file.html
+++ b/monitoring/templates/monitoring/upload_file.html
@@ -62,7 +62,7 @@
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'faq' %}">User guide</a>
+                    <a class="nav-link" href="{% url 'faq' %}">Support Page</a>
                 </li>
             </ul>
         </div>
